Fixed a scroll bar that was taking up too much space.

--- a/client/panelView/src/main.css
+++ b/client/panelView/src/main.css
@@ -249,7 +249,17 @@ a:hover{
   font-weight: bold;
   position: absolute;
   top: 50%;
-  left: 5px;  /* ajusta este valor para separarlo del número */
+  left: 5px;  
+}
+
+@layer utilities {
+  .hide-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 /* Graphic */
